--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="backtracking_heading">Recursion and Backtracking</string>
     <string name="stacks_and_queues_heading">Stack and Queue</string>
     <string name="bootstrap_and_jquery_heading">Bootstrap and Jquery</string>
+    <string name="trees_heading">Trees</string>
     <string name="about_mobility_companies">
         <b>=></b> Mobility is the industry of transporting people and goods.\n
         <b>=></b> Revenue in the Ride-hailing and Taxi segment is projected to reach US$12.77bn in 2023.\n
@@ -1477,7 +1478,7 @@ Step by step guide to become a AI/ML scientist.
                 }\n
                 return celeb;\n
             }\n
-        };\n
+        };\n\n
         <b>JAVA CODE:</b>
         class Solution{\n
             //Function to find if there is a celebrity in the party or not.\n
@@ -1512,6 +1513,126 @@ Step by step guide to become a AI/ML scientist.
             }\n
         }\n
     </string>
+
+
+
+
+    <string name="trees_q1">Question 1:\n
+        Given a binary tree, find its level order traversal. Level order traversal of a tree is breadth-first traversal for the tree.\n
+    </string>
+    <string name="code_trees_q1">
+        <b>C++ CODE:</b>\n
+        class Solution{\n
+            public:\n
+                //Function to return the level order traversal of a tree.\n
+                vector&lt;int> levelOrder(Node* node){\n
+                    vector&lt;int>ans;\n
+                    queue&lt;Node*>q;\n
+                    q.push(node);\n
+
+                    if(node==NULL)return ans;\n
+
+                    while(!q.empty()){\n
+                        Node* temp = q.front();\n
+                        q.pop();\n
+                        ans.push_back(temp->data);\n
+
+                        if(temp->left) q.push(temp->left);\n
+                        if(temp->right) q.push(temp->right);\n
+                    }\n
+                    return ans;\n
+                }\n
+        };\n\n
+        <b>JAVA CODE:</b>
+        class Solution{\n
+            //Function to return the level order traversal of a tree.\n
+            static ArrayList &lt;Integer> levelOrder(Node node){\n
+                ArrayList&lt;Integer> list=new ArrayList&lt;>();\n
+                if(node==null) return;\n
+                Queue&lt;Node> q=new LinkedList&lt;Node>();\n
+                q.add(node);\n
+                while(q.isEmpty()==false){\n
+                    Node curr=q.poll();\n
+                    list.add(curr.data);\n
+                    if(curr.left!=null){\n
+                        q.add(curr.left);\n
+                    }\n
+                    if(curr.right!=null){\n
+                        q.add(curr.right);\n
+                    }\n
+                }\n
+                return list;\n
+            }\n
+        }\n
+    </string>
+
+
+
+    <string name="trees_q2">Question 2:\n
+        Given a binary tree, find if it is height balanced or not. A tree is height balanced if difference between heights of left and right subtrees is not more than one for all nodes of tree. \n
+    </string>
+    <string name="code_trees_q2">
+        <b>C++ CODE:</b>\n
+        class Solution{\n
+            public:\n
+            //Function to check whether a binary tree is balanced or not.\n
+
+            int isbal(Node * root)// if tree is balanced return height , else return -1(not balanced){\n
+                // this is O(n) code where n is the number of nodes\n
+                // if we calculate height seprately then it becomes O(n^2)\n
+                if(!root)return 0;\n
+
+                int lh=isbal(root->left);\n
+                if(lh==-1)return -1;\n
+                int rh=isbal(root->right);\n
+                if(rh==-1)return -1;\n
+
+                if(abs(rh-lh)>1)return -1;\n
+                else return max(lh,rh)+1;\n
+
+            }\n
+
+            bool isBalanced(Node *root){\n
+                int ans=isbal(root);\n
+                if(ans==-1)return 0;\n
+                else return 1;\n
+            }\n
+        };\n\n
+        <b>JAVA CODE:</b>
+        class Tree{\n
+            int height(Node root){\n
+                if(root==null){\n
+                    return 0;\n
+                }   \n
+                int left=height(root.left);\n
+                int right=height(root.right);\n
+
+
+                return Math.max(left,right)+1;\n
+            }\n
+
+
+            boolean isBalanced(Node root){\n
+                if(root==null){\n
+                    return true;\n
+                }\n
+                int lh=height(root.left);\n
+                int rh=height(root.right);\n
+                if(Math.abs(lh-rh)>1){\n
+                    return false;\n
+                }\n
+
+                boolean left=isBalanced(root.left);\n
+                boolean right=isBalanced(root.right);\n
+                if(left==false||right==false)return false;\n
+                else{\n
+                    return true;\n
+                }\n
+            }\n
+        }\n
+    </string>
+
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
